# takecopter

./: .gitignore  CHANGELOG.md  README.md  package.json
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  project.rs
apps/desktop/src/components/layout/: AppShell.module.css  AppShell.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx  index.ts
apps/desktop/src/components/ui/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  Panel.module.css  Panel.tsx  index.ts
apps/desktop/src/data/: dbStorage.ts  mockData.ts  projectRepository.ts  repositoryTypes.ts  tauriRepository.ts
apps/desktop/src/hooks/: useAppState.ts  useProjectData.ts
apps/desktop/src/types/: index.ts
apps/desktop/src/views/: CreateView.module.css  CreateView.tsx  DeleteStoryDialog.module.css  DeleteStoryDialog.tsx  HomeView.module.css  HomeView.tsx  NewStoryDialog.tsx  OutlineView.module.css  OutlineView.tsx  ProjectSetupView.module.css  ProjectSetupView.tsx  RenameStoryDialog.module.css  RenameStoryDialog.tsx  SettingView.module.css  SettingView.tsx  index.ts
docs/: ARCHITECTURE.md  PRD.md
docs/plans/: 2026-02-19-takecopter-dual-platform-architecture-draft.md  2026-02-19-takecopter-implementation-plan.md  2026-02-19-takecopter-v1-product-prototype.md  2026-02-21-setting-ai-assist-implementation-breakdown.md
scripts/: build.mjs  platform.sh
