[package]
name = "takecopter-desktop"
version = "0.1.0"
description = "takecopter desktop app"
authors = ["takecopter"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
